[package]
name = "tvix-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
tracing = { version = "0.1.40", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
indicatif = "0.17.8"
tracing-indicatif = "0.3.6"
tokio = { version = "1.32.0" , features = ["sync", "rt"] }
thiserror = "1.0.38"

tracing-opentelemetry = { version = "0.23.0", optional = true }
opentelemetry = { version = "0.22.0", optional = true }
opentelemetry-otlp = { version = "0.15.0", optional = true }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"], optional = true }
tracing-tracy = { version = "0.11.0", features = ["flush-on-exit"], optional = true }

[features]
default = []
otlp = [
  "dep:tracing-opentelemetry",
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk"
]
tracy = [
  "dep:tracing-tracy"
]

[lints]
workspace = true
