[package]
name = "tvix-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
tracing = { version = "0.1.40", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
indicatif = "0.17.8"
tracing-indicatif = "0.3.6"
tokio = { version = "1.32.0" , features = ["sync", "rt"] }
thiserror = "1.0.38"

tracing-opentelemetry = { git = "https://github.com/tokio-rs/tracing-opentelemetry", branch = "otel-0.24", version = "0.25.0", optional = true }
opentelemetry = { version = "0.24.0", optional = true }
opentelemetry-otlp = { version = "0.17.0", optional = true }
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"], optional = true }
tracing-tracy = { version = "0.11.0", features = ["flush-on-exit"], optional = true }
opentelemetry-http = { version = "0.13.0", optional = true }

tonic = { version = "0.12.0", optional = true }
http  = { version = "1.1.0", optional = true }

reqwest-tracing = { version = "0.5.0", default-features = false, optional = true }

axum = { version = "0.7.5", optional = true }

[features]
default = []
otlp = [
  "dep:tracing-opentelemetry",
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-http",
  "reqwest-tracing?/opentelemetry_0_22",
]
tracy = [
  "dep:tracing-tracy"
]
tonic = [
  "dep:tonic",
  "dep:http",
]
reqwest = [
  "dep:reqwest-tracing",
]
axum = [
  "dep:axum",
]

[lints]
workspace = true
