[package]
name = "tvix-eval-builtin-macros"
version = "0.0.1"
authors = [ "Griffin Smith <root@gws.fyi>" ]
edition = "2021"

[dependencies]
syn = { version = "1.0.57", features = ["full", "parsing", "printing", "visit", "visit-mut", "extra-traits"] }
quote = "1.0.8"
proc-macro2 = "1"

[lib]
proc-macro = true

[dev-dependencies]
tvix-eval = { path = "../" }
