[package]
name = "tvix-eval-builtin-macros"
version = "0.0.1"
authors = [ "Griffin Smith <root@gws.fyi>" ]
edition = "2021"

[dependencies]
syn = { version = "1.0.109", features = ["full", "parsing", "printing", "visit", "visit-mut", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[lib]
proc-macro = true

[dev-dependencies]
tvix-eval = { path = "../" }
