[package]
name = "narinfo2parquet"
version = "0.1.0"
edition = "2021"

# We can't join the //tvix workspace, because that locks zstd
# at an ancient version, which is incompatible with polars
[workspace]
members = ["."]

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
jemallocator = "0.5.4"
nix-compat = { version = "0.1.0", path = "../../nix-compat" }
tempfile-fast = "0.3.4"
zstd = "0.13.0"

[dependencies.polars]
version = "0.34.2"
default-features = false
features = [
    "parquet",
    "polars-io",
    "dtype-categorical"
]
