[package]
name = "weave"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]

# TODO(edef): cut down on required features, this is kind of a grab bag right now
[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
hashbrown = "0.14.3"
nix-compat = { version = "0.1.0", path = "../../nix-compat" }
owning_ref = "0.4.1"
rayon = "1.8.1"
tokio = { version = "1.36.0", features = ["full"] }

[dependencies.polars]
version = "0.36.2"
features = ["parquet"]
